inserindo o file upload

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,6 +30,9 @@ jobs:
         run: npm install
       - name: Install dependencies
         run: npm install cypress-xpath --save-dev
+      - name: Cypress file upload
+        run: npm install --save-dev cypress-file-upload
+
 
       # Runs a set of commands using the runners shell
       - name: Run Cypress
